app/styles/main.css
/* Space out content a bit */
body {
  padding-top: 20px;
  padding-bottom: 20px;
}

/* Everything but the jumbotron gets side spacing for mobile first views */
.header,
.marketing,
.footer {
  padding-left: 15px;
  padding-right: 15px;
}

/* Custom page header */
.header {
  border-bottom: 1px solid #e5e5e5;
}
/* Make the masthead heading the same height as the navigation */
.header h3 {
  margin-top: 0;
  margin-bottom: 0;
  line-height: 40px;
  padding-bottom: 19px;
}

/* Custom page footer */
.footer {
  padding-top: 19px;
  color: #777;
  border-top: 1px solid #e5e5e5;
}

/* Customize container */
@media (min-width: 768px) {

}
.container-narrow > hr {
  margin: 30px 0;
}

/* Main marketing message and sign up button */
.jumbotron {
  text-align: center;
  border-bottom: 1px solid #e5e5e5;
}
.jumbotron .btn {
  font-size: 21px;
  padding: 14px 24px;
}

/* Supporting marketing content */
.marketing {
  margin: 40px 0;
}
.marketing p + h4 {
  margin-top: 28px;
}

/* Custom classes */
.park-details {
/*  display: none;*/
  padding-left: 10%;
  display: inline;
  float: right;
  width: 65%;
  border-left: 1px solid #999999;
}

.park-names {
  display: inline-block;
  float: left;
  width: 33%;
  margin-right: 2%;
}

.park:hover {
  cursor: pointer;
  background-color: gray;
}

.tips {
  width: 100%;
}

.instagram-pictures {
  width: 100%;
}

.pictures-carousel {
  height: 100%;
  margin-bottom: 20px;
}

input {
  height: 25px;
  width: 80%;
  margin-bottom: 10px;
}

.carousel-indicators li {
  display: inline-block;
  width: 5px;
  height: 5px;
  margin: 1px;
  text-indent: -999px;
  border: 1px solid #ffffff;
  border-radius: 10px;
  cursor: pointer;
  background-color: #000 \9;
  background-color: rgba(0, 0, 0, 0);
}

.carousel-indicators .active {
  margin: 0;
  width: 7px;
  height: 7px;
  background-color: #ffffff;
}

.container {
  margin-right: auto;
  margin-left: auto;
  padding-left: 50px;
  padding-right: 50px;
}

.form-control {
  width: 80%;
  margin-left: 10px;
}

@media (min-width: 768px) {
  .container {
    width: 750px;
  }
}

@media (min-width: 992px) {
  .container {
    width: 950px;
  }
}

@media (min-width: 1200px) {
  .container {
    width: 1100px;
  }
}

/* Responsive: Portrait tablets and up */
@media screen and (min-width: 768px) {
  /* Remove the padding we set earlier */
  .header,
  .marketing,
  .footer {
    padding-left: 0;
    padding-right: 0;
  }
  /* Space out the masthead */
  .header {
    margin-bottom: 30px;
  }
  /* Remove the bottom border on the jumbotron for visual effect */
  .jumbotron {
    border-bottom: 0;
  }
}

@media screen and (max-width: 800px) {
  .park-details {
    float: left;
    width: 96%;
    margin-bottom: 40px;
    padding-bottom: 40px;
    padding-left: 5px;
    border-bottom: 1px solid #e5e5e5;
    margin-left: -35px;
    width: 110%;
  }

  .park-names {
    float: right;
    width: 105%;
    margin-left: -35px;
  }

}

